# ppm-viewer

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  parser.cpp
src/core/: PPMImage.cpp  PPMImage.hh  Shader.cpp  Shader.hh  application.cpp  application.hh  renderer.cpp  renderer.hh
src/shader/: basic.shader
